[package]
name = "cses-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "weird_algo"
path = "src/intro_probs/weird_algo.rs"

[[bin]]
name = "ms_num"
path = "src/intro_probs/ms_num.rs"

[[bin]]
name = "repetitions"
path = "src/intro_probs/repetitions.rs"

[[bin]]
name = "incr_arr"
path = "src/intro_probs/incr_arr.rs"

[[bin]]
name = "perms"
path = "src/intro_probs/perms.rs"

[[bin]]
name = "num_spiral"
path = "src/intro_probs/num_spiral.rs"

[[bin]]
name = "two_knights"
path = "src/intro_probs/two_knights.rs"

[[bin]]
name = "bit_strs"
path = "src/intro_probs/bit_strs.rs"

[[bin]]
name = "two_sets"
path = "src/intro_probs/two_sets.rs"

[[bin]]
name = "trailing_zeros"
path = "src/intro_probs/trailing_zeros.rs"

[[bin]]
name = "coin_piles"
path = "src/intro_probs/coin_piles.rs"

[[bin]]
name = "pal_ro"
path = "src/intro_probs/pal_ro.rs"

[[bin]]
name = "gray_code"
path = "src/intro_probs/gray_code.rs"

[[bin]]
name = "toh"
path = "src/intro_probs/toh.rs"

[[bin]]
name = "creating_strs"
path = "src/intro_probs/creating_strs.rs"

[[bin]]
name = "apple_div"
path = "src/intro_probs/apple_div.rs"

[[bin]]
name = "chessbrd_qns"
path = "src/intro_probs/chessbrd_qns.rs"

[[bin]]
name = "digit_qrys"
path = "src/intro_probs/digit_qrys.rs"

[[bin]]
name = "distinct_nums"
path = "src/sorting_and_searching/distinct_nums.rs"

[[bin]]
name = "apts"
path = "src/sorting_and_searching/apts.rs"

[[bin]]
name = "ferris_wheel"
path = "src/sorting_and_searching/ferris_wheel.rs"
